creting a production version to lib

--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "remember.chrome",
   "version": "1.0.0",
   "description": "A chrome alarm manager",
-  "main": "remember.chrome.js",
+  "main": "dist/remember.chrome.min.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "PROD_ENV=production webpack",
+    "dev": "webpack --watch",
+    "start": "npm run dev"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/victorvoid/alarm.chrome.git"
+    "url": "git+https://github.com/victorvoid/remember.chrome.git"
   },
   "keywords": [
     "alarm.chrome",
@@ -18,10 +20,18 @@
     "extension",
     "helpers"
   ],
+  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
+    "webpack": "^2.3.3"
+  },
   "author": "Victor Igor",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/victorvoid/alarm.chrome/issues"
+    "url": "https://github.com/victorvoid/remember.chrome/issues"
   },
-  "homepage": "https://github.com/victorvoid/alarm.chrome#readme"
+  "homepage": "https://github.com/victorvoid/remember.chrome#readme"
 }
