--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "remember.chrome",
-  "version": "1.0.1",
-  "description": "A chrome alarm manager",
+  "version": "1.0.2",
+  "description": "A chrome alarm manager to schedule code to run periodically or at a specified time in the future.",
   "main": "dist/remember.chrome.min.js",
   "scripts": {
     "build": "PROD_ENV=production webpack",
@@ -20,6 +20,9 @@
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-implicit-function": "^0.1.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
